gnome-terminal (3.21.92-1) UNRELEASED; urgency=medium

  * New upstream development release.
  * Bump Build-Depends on libvte-2.91-dev to (>= 0.45.92) as per configure.ac.
  * Drop Revert-window-Fix-CSD-size-calculations-with-long-ti.patch and
    window-Fix-CSD-size-calculations-with-long-titles.patch, merged upstream.

 -- Michael Biebl <biebl@debian.org>  Wed, 14 Sep 2016 18:03:55 +0200

gnome-terminal (3.21.90-3) unstable; urgency=medium

  * Team upload

  [ Sjoerd Simons ]
  * debian/patches/window-Fix-CSD-size-calculations-with-long-titles.patch
    - Added. Fix terminal window unintentially resizing when using long titles
      and CSD (bgo#769898c9)

 -- Simon McVittie <smcv@debian.org>  Wed, 07 Sep 2016 13:25:38 +0100

gnome-terminal (3.21.90-2) unstable; urgency=medium

  * Upload to unstable.
  * Convert from cdbs to dh.
  * Enable all hardening flags.

 -- Michael Biebl <biebl@debian.org>  Thu, 01 Sep 2016 17:05:24 +0200

gnome-terminal (3.21.90-1) experimental; urgency=medium

  * New upstream beta release.
  * Update build-dependencies according to configure.ac changes:
    - bump libvte-2.91-dev to >= 0.45.90
  * Drop following debian/patches superseeded/included in current release:
    - Fix-chunked-resize-and-geometry-option.patch
    - Replace-no-op-gtk_window_resize_to_geometry-by-calcu.patch
    - git_notebook-avoid-crash-on-tab-DND.patch
  * Have quilt refresh remaining patches.

 -- Andreas Henriksson <andreas@fatal.se>  Thu, 18 Aug 2016 17:07:09 +0200

gnome-terminal (3.20.2-4) unstable; urgency=medium

  * debian/patches/window-Fix-CSD-size-calculations-with-long-titles.patch
    - Disabled. Fixes things on wayland, causes regressions on X11, grumble.
      (Closes: #834455)

 -- Sjoerd Simons <sjoerd.simons@collabora.co.uk>  Thu, 18 Aug 2016 08:46:38 +0200

gnome-terminal (3.20.2-3) unstable; urgency=medium

  * debian/patches/window-Fix-CSD-size-calculations-with-long-titles.patch